image issue attempt 2

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="partTwo ">
-                <img src="images/H1d3b3126ce5c4a4dab1f9a7cc213c7da1.jpg_720x720q50-removebg-preview.png" alt="">
+                <img src="./images/H1d3b3126ce5c4a4dab1f9a7cc213c7da1.jpg_720x720q50-removebg-preview.png" alt="">
             </div>
         </div>
 
@@ -68,8 +68,8 @@
 
             <div class="part2">
                 <img src="http://www.brwhiteside.com/assets/images/homepage-2/product-1.png" alt="">
-                <img src="images/indoor-plants-studio_23-2151022079-removebg-preview.png" alt="">
-                <img src="images/1000011591390-1000011591389_01-2100-removebg-preview.png" alt="">
+                <img src="./images/indoor-plants-studio_23-2151022079-removebg-preview.png" alt="">
+                <img src="./images/1000011591390-1000011591389_01-2100-removebg-preview.png" alt="">
 
             </div>
         </div>
